# AI_debate

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml
config/: default.yaml  personalities.yaml  topics.yaml
docs/superpowers/plans/: 2026-03-22-ai-debate-system.md  2026-03-24-debate-optimizations.md
docs/superpowers/specs/: 2026-03-22-ai-debate-system-design.md  2026-03-24-debate-optimizations-design.md
src/: __init__.py  cli.py  config.py  export.py
src/agents/: __init__.py  base.py  debater.py  judge.py  prompts.py
src/display/: terminal.py
src/engine/: message_pool.py  scorer.py  timer.py
src/llm/: __init__.py  base.py  openai_compatible.py  zhipu.py
src/stages/: __init__.py  base.py  closing.py  controller.py  cross_exam.py  free_debate.py  opening.py
tests/: conftest.py  test_agents.py  test_cli.py  test_config.py  test_controller.py  test_display.py  test_export.py  test_judge.py  test_llm.py  test_message_pool.py  test_scorer.py  test_stages.py  test_timer.py
